<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMessenger</string>
    <string name="action_settings">Settings</string>
    <string name="answer_to">Answer to…</string>
    <string name="menu1">All messages</string>
    <string name="menu2">Add service</string>
    <string name="menu3">Remove service</string>
    <string name="menu4">Settings</string>
    <string name="menu5">Help</string>
    <string name="menu6">Developers</string>
    <string name="menu7">Leave a review</string>
    <string name="menu8">$Donate$</string>
    <string name="vk_retry">Retry</string>
    
    <string name="action_item_1">Item 1</string>
	<string name="action_item_2">Item 2</string>
	<string name="action_item_3">Item 3</string>
	
	
	<string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>

</resources>
